corrected overlapping of footer icons
* removed 'position' style of footer icons in 'airspace.css' to stop overlapping

* made footer div responsive by correcting classes in 'footer.html' and aligned code lines correctly after change

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -952,9 +952,6 @@ footer .footer-manu ul li a:hover {
     .active.widget h4:after {
         background:#ccc;
     }
-    .ssk-group{
-      position: absolute;
-    }
 }
 #own-ssk{
   margin-left: 5px;
